# unitor

./: .gitattributes  .gitignore  HANDOFF.md  Makefile  README.md  index.html
.docs/: 01-current-state.md  02-frontend-inventory.md  03-mock-data-and-state.md  04-backend-gaps.md  05-planning-targets.md  06-erd.md  07-auth-flows.md  08-matching-spec.md  09-csv-roster-spec.md  10-api-surface.md  README.md  easea-scenario-ux-flows.md  evaluations.md  frontend-stage1-plan.md  frontend-stage2-plan.md
assets/: index-2mWR0g4k.css  index-B7HG13El.js  index-BJXdDvpK.js  index-BQY9W_xe.js  index-BqzItykb.js  index-CE7vOp2M.js  index-CGgQKZtQ.css  index-CRY5lkB1.js  index-CRiRDKC4.css  index-CfN2hR52.js  (+8 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_extensions_and_enums.py  0002_core_tables.py  0003_profiles.py  0004_groups.py  0005_requests_applications.py  0006_conversations_messages.py  0007_notifications_compat_audit.py  0008_ta_allowlist.py  0009_rls_recursion_fix.py  0010_compat_cache_writes_and_invalidation.py  0011_users_update_own_row.py
backend/app/: config.py  main.py  observability.py
backend/app/api/v1/: compatibility.py  courses.py  discovery.py  groups.py  health.py  profiles.py  users.py
backend/app/api/v1/admin/: __init__.py
backend/app/api/v1/auth/: __init__.py  routes.py
backend/app/auth/: jwt.py
backend/app/db/: admin.py  session.py
backend/app/db/models/: __init__.py  application.py  base.py  compatibility.py  enrollment.py  group.py  profile.py  tenancy.py  user.py
backend/app/jobs/: __init__.py
backend/app/middleware/: request_id.py
backend/app/schemas/: auth.py  compatibility.py  courses.py  discovery.py  errors.py  groups.py  profile.py
backend/app/services/: __init__.py  auth_bootstrap.py  auth_join.py  compatibility.py  courses.py  discovery.py  groups.py  profile.py  users.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth_routes.py  test_compatibility.py  test_config.py  test_courses_routes.py  test_discovery_routes.py  test_groups_routes.py  test_jwt.py  test_profile_routes.py  test_smoke.py  test_users_routes.py
(+92 files in other folders)
